# NanoLLaDA

./: .gitignore  README.md  pyproject.toml
archive/: script-13-16.txt  slide-flow.txt
data/: gemini_summaries.csv  langchain-map-reduce.csv  langchain-refine.csv  test-100-1024-generated-base-08-05-2025.csv  test-100-1024-generated-base.csv  test-100-1024-generated-fine-tuned-08-05-2025.csv  test-100-1024-generated-fine-tuned-20k-dp.csv  test-100-1024-generated-fine-tuned-30k-dp.csv  test-100-1024-generated-fine-tuned-40k-dp.csv  test-100-1024-generated-ft.csv  test-100-1024.csv  test-100-2048.csv  test-100-geq-2048.csv  typhoon_inference.csv
data/report/: score_summary_report.txt
data/score/: score-gemini_summaries.csv  score-langchain-map-reduce.csv  score-langchain-refine.csv  score-test-100-1024-generated-base-08-05-2025.csv  score-test-100-1024-generated-fine-tuned-08-05-2025.csv  score-test-100-1024-generated-fine-tuned-20k-dp.csv  score-test-100-1024-generated-fine-tuned-30k-dp.csv  score-test-100-1024-generated-fine-tuned-40k-dp.csv  score-typhoon_inference.csv
eval/: 2025-05-08-eval-parallel.py  summarize_evals.py
modal/: fine_tune.py  inference-base.py  inference.py  upload.py
notebooks/: .deepeval-cache.json  .deepeval_telemetry.txt  2025-03-28-pupipat.ipynb  2025-03-29-poc.ipynb  2025-05-04-2040-post-req-finetuned-wo-langchain.ipynb  2025-05-04-2100-inference-base.ipynb  2025-05-04-2215-post-req-base.ipynb  2025-05-04-eval.ipynb  2025-05-04-refactor-modal.ipynb  2025-05-04-refactor.ipynb  2025-05-08-eval-parallel.py  20250328-2114-pupipat.ipynb  20250328-pupipat.ipynb  kawin-colab.ipynb  prep.ipynb  score-gemini.csv
notebooks/Experiment archive/: mt5-small.ipynb  nanofrfrllada.ipynb  nanollada-instr.ipynb  test-deepeval.ipynb
resources/: ml-gsai-llada.txt
src/utils/: csv_to_parquet.py
web/: package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: theme-toggle.tsx
web/lib/: summarizer.ts
