[project]
name = "nanollada"
version = "0.1.0"
description = "Fine-tuning Large Language Diffusion Models"
authors = [
    {name = "pupipatsk",email = "pupipat.sk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.2"
mypy = "^1.15.0"
pytest = "^8.3.5"
notebook = "^7.3.3"
ipykernel = "^6.29.5"
