[project]
name = "nanollada"
version = "0.1.0"
description = "Fine-tuning Large Language Diffusion Models"
authors = [
    {name = "Pupipat Singkhorn",email = "pupipat.sk@gmail.com"},
    {name = "Kawin Rattanapun"},
    {name = "Chanatip Pattanapen"},
    {name = "Chotpisit Adunsehawat"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "transformers (>=4.50.3,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.2"
mypy = "^1.15.0"
pytest = "^8.3.5"
notebook = "^7.3.3"
ipykernel = "^6.29.5"
